# simpleweb

./: agregar.html  app.py  footer.tpl  header.tpl  index.html  index.tpl  labs.db  pyproject.toml  requirements.txt
static/css/: style.css  wishunded.css
