[tool.poetry]
name = "simpleweb"
version = "0.1.0"
description = "simple web back end with bottlepy"
authors = ["lusifer <lusifer@localhost.localdomain>"]

[tool.poetry.dependencies]
python = "^3.9"
bottle = "^0.12.19"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
